Fix error message on dark mode

--- a/components/CallToActionInput/index.module.scss
+++ b/components/CallToActionInput/index.module.scss
@@ -33,7 +33,7 @@
       border: 1px solid #D1D1D6;
 
       &.error {
-        border: 2px solid #FF2D55;
+        border: 2px solid #FF3B30;
       }
 
       .emailWrapper {
